added some routes, and triggers
